--- a/app/src/main/res/layout/gameover.xml
+++ b/app/src/main/res/layout/gameover.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
-    android:layout_width="800dp"
-    android:layout_height="700dp"
-    android:background="#65FFB3B3">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#8AD163EA">
 
 
     <TextView
@@ -16,10 +16,12 @@
         android:text="hh"
         android:textColor="@color/black"
         android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/home"
@@ -27,9 +29,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="50dp"
-        android:background="#80C7ECEC"
         android:text="Home"
         android:textSize="20dp"
+        android:background="@drawable/game_button"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
